renamed from binary_processor.h/ binary_processors_enumerators to BinaryConverter.hpp/TypeDefinitions.hpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,7 @@ set(CMAKE_CXX_STANDARD 14)
 
 add_executable(binary_data_processing
         main.cpp
-        inc/binary_processor.h
-        inc/processor_template.h
-        inc/processor_template.h
-        inc/binary_processors_enumerators.h
-        inc/binary_processors_enumerators.h
+        inc/BinaryConverter.hpp
+        inc/TypeDefinitions.hpp
+        inc/TypeDefinitions.hpp
 )
